# orbit

./: .env.example  .gitignore  Dockerfile  README.md  deploy.oracle.md  docker-compose.yml  fly.toml  package-lock.json  package.json  pyproject.toml  tsconfig.json
src/: bot.ts  config.ts  db.ts  index.ts
src/naimed_kepler_bot/: __init__.py  bot.py  config.py  main.py
src/naimed_kepler_bot/cogs/: __init__.py  employee.py  governance.py  performance.py  reward.py
src/naimed_kepler_bot/services/: employee_service.py  governance_service.py  performance_service.py  reward_service.py  storage.py
src/services/: employee-service.ts  governance-service.ts  performance-service.ts  reward-service.ts
